<resources>
    <string name="app_name">Workout App</string>
    <string name="title_home">Workouts</string>
    <string name="title_add">Add</string>
    <string name="title_history">History</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="sets">Sets</string>
    <string name="_2">2</string>
    <string name="add_button">Add button</string>
    <string name="reps">Reps</string>
    <string name="create">Create</string>
    <string name="_10">10</string>
    <string name="save">Save</string>
    <string name="workout_name">Workout Name</string>
    <string name="example">example</string>
    <string name="title">Title</string>
    <string name="exercise">Exercise</string>
    <string name="line">_____________________________________________________</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="button">Button</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="would_you_like_to_record_the_workout">Would you like to record the workout?</string>
    <string name="_0">0</string>
    <string name="end">End</string>
    <string name="_0_0">0 0</string>
    <string name="sign">:</string>
    <string name="backSign"><![CDATA[<]]></string>
    <string name="workouts">Workouts</string>
    <string name="are_you_sure_you_want_to_delete_this_workout">Are you sure you want to delete this workout?</string>
    <string name="go">GO!</string>
    <string-array name="workout_array">
        <item>Run</item>
        <item>Squats</item>
        <item>Push ups</item>
    </string-array>
</resources>