<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey">

    <TextView
        android:id="@+id/WorkoutTitle"
        android:layout_width="203dp"
        android:layout_height="91dp"
        android:layout_marginBottom="516dp"
        android:gravity="center"
        android:text="@string/exercise"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseHeading"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:id="@+id/exerciseLine"
        android:layout_width="348dp"
        android:layout_height="48dp"
        android:text="@string/line"
        android:textColor="#888888"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="76dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/yes"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/startColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <Button
        android:id="@+id/noBtn"
        android:layout_width="76dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/no"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="242dp"
        android:layout_height="101dp"
        android:fallbackLineSpacing="false"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/would_you_like_to_record_the_workout"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

</androidx.constraintlayout.widget.ConstraintLayout>