<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey">

    <View
        android:id="@+id/exerciseHeading"
        android:layout_width="455dp"
        android:layout_height="66dp"
        android:background="@color/headingGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/exerciseHeading"
        app:layout_constraintEnd_toEndOf="@+id/exerciseHeading"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/exerciseHeading"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/WorkoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/exerciseHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/exerciseHeading" />

    <TextView
        android:id="@+id/ExerciseTitle"
        android:layout_width="319dp"
        android:layout_height="147dp"
        android:gravity="center"
        android:text="@string/exercise"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseHeading"
        app:layout_constraintVertical_bias="0.161" />

    <TextView
        android:id="@+id/ExerciseLine"
        android:layout_width="348dp"
        android:layout_height="48dp"
        android:text="@string/line"
        android:textColor="#888888"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="97dp"
        android:layout_height="88dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/startColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <Button
        android:id="@+id/endBtn"
        android:layout_width="97dp"
        android:layout_height="88dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/end"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="76dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="76dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <Button
        android:id="@+id/FinishBtn"
        android:layout_width="118dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/finish"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:visibility="invisible"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toEndOf="@+id/startBtn"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseLine"
        app:layout_constraintVertical_bias="0.59" />

    <TextView
        android:id="@+id/SetsReps"
        android:layout_width="91dp"
        android:layout_height="110dp"
        android:layout_marginBottom="276dp"
        android:gravity="center"
        android:text="Sets\n\nReps"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/numOfSets"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginBottom="336dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/numOfReps"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginBottom="276dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/colonSign"
        android:layout_width="92dp"
        android:layout_height="108dp"
        android:gravity="center"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseLine"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/colonSign2"
        android:layout_width="92dp"
        android:layout_height="108dp"
        android:gravity="center"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseLine"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/SecondsLeft"
        android:layout_width="94dp"
        android:layout_height="107dp"
        android:gravity="center"
        android:text="@string/_0_0"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseLine"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/MinutesLeft"
        android:layout_width="90dp"
        android:layout_height="109dp"
        android:gravity="center"
        android:text="@string/_0_0"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseLine"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/HoursLeft"
        android:layout_width="90dp"
        android:layout_height="109dp"
        android:gravity="center"
        android:text="@string/_0_0"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseLine"
        app:layout_constraintVertical_bias="0.099" />

</androidx.constraintlayout.widget.ConstraintLayout>