<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".WorkoutPage">

    <View
        android:id="@+id/exerciseHeading2"
        android:layout_width="417dp"
        android:layout_height="67dp"
        android:background="@color/headingGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exerciseView"
        android:layout_width="410dp"
        android:layout_height="621dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseHeading2" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:background="#00FF0000"
        android:gravity="center"
        android:onClick="backThis"
        android:text="@string/workouts"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/transparency2"
        android:layout_width="426dp"
        android:layout_height="772dp"
        android:background="#CC605E5E"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backgroundText"
        android:layout_width="250dp"
        android:layout_height="141dp"
        android:layout_marginTop="280dp"
        android:background="#1B1919"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteMsg"
        android:layout_width="219dp"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_delete_this_workout"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/backgroundText"
        app:layout_constraintTop_toTopOf="@+id/backgroundText" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="79dp"
        android:layout_height="47dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        android:onClick="yesDelete"
        android:text="Yes"
        app:backgroundTint="#CD1D1D"
        app:layout_constraintStart_toEndOf="@+id/noButton"
        app:layout_constraintTop_toBottomOf="@+id/deleteMsg" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:onClick="noDelete"
        android:text="No"
        app:backgroundTint="#302E2E"
        app:layout_constraintStart_toStartOf="@+id/backgroundText"
        app:layout_constraintTop_toBottomOf="@+id/deleteMsg" />

    <Button
        android:id="@+id/runButton"
        android:layout_width="97dp"
        android:layout_height="88dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/go"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="startWorkout"
        app:backgroundTint="@color/startColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="64dp"
        android:onClick="deleteThis"
        android:text="Delete"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/runButton" />

    <Button
        android:id="@+id/saveEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:onClick="saveEdit"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="invisible"
        app:backgroundTint="@color/startColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="64dp"
        android:text="Edit"
        android:onClick="editWorkout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/runButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:onClick="cancelEdit"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="invisible"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <TextView
        android:id="@+id/backSign"
        android:layout_width="21dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="380dp"
        android:layout_marginRight="380dp"
        android:gravity="center"
        android:text="@string/backSign"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>